@@ -18,6 +18,13 @@ a:active				{color:rgba(0,0,170,1);}
 .overlay				{background-color:rgba(0,0,31,0.6);}
 
 
+/*	Settings
+	============================================= */
+#settings				{background-color:rgba(0,0,130,1);}
+a.settings_link span	{color:rgba(0,0,255,1);}
+a.settings_link:hover span	{color:rgba(0,0,255,1);}
+
+
 /*	Breadcrumbs
 	============================================= */
 a.crumb					{color:rgba(0,0,204,1);}
@@ -62,7 +69,7 @@ a.ask.donor				{background-color:rgba(0,0,130,1);}
 a.ask.donor:hover		{background-color:rgba(0,0,158,1);}
 a.ask.sector			{background-color:rgba(0,0,107,1);}
 a.ask.sector:hover		{background-color:rgba(0,0,136,1);}
-.main_peak_wrap			{background-color:rgba(0,0,255,1);}
+.main_peak_wrap			{background-color:rgba(255,255,255,1);}
 .peak.donor				{border-top:20px solid rgba(0,0,130,1);}
 .peak.sector			{border-top:20px solid rgba(0,0,107,1);}
 a.view_all_money		{background-color:rgba(0,0,15,0.7); color:rgba(0,0,204,1);}
