@@ -19,6 +19,13 @@ a:active				{color:rgba(170,170,170,1);}
 .overlay				{background-color:rgba(233,233,233,0.8);}
 
 
+/*	Settings
+	============================================= */
+#settings				{background-color:rgba(97,2,21,0.3);}
+a.settings_link span	{color:rgba(255,255,255,0);}
+a.settings_link:hover span	{color:rgba(255,255,255,1);}
+
+
 /*	Breadcrumbs
 	============================================= */
 a.crumb					{color:rgba(235,235,235,1);}
