@@ -17,6 +17,13 @@ a:active				{color:rgba(170,170,170,1);}
 .overlay				{background-color:rgba(31,31,31,0.6);}
 
 
+/*	Settings
+	============================================= */
+#settings				{background-color:rgba(24,23,21,1);}
+a.settings_link span	{color:rgba(255,255,255,0);}
+a.settings_link:hover span	{color:rgba(255,255,255,1);}
+
+
 /*	Breadcrumbs
 	============================================= */
 a.crumb					{color:rgba(163,116,34,1);}
