@@ -17,6 +17,13 @@ a:active				{color:rgba(255,170,85,1);}
 .overlay				{background-color:rgba(46,41,6,0.6);}
 
 
+/*	Settings
+	============================================= */
+#settings				{background-color:rgba(255,255,255,1);}
+a.settings_link span	{color:rgba(255,255,255,0);}
+a.settings_link:hover span	{color:rgba(255,255,255,1);}
+
+
 /*	Breadcrumbs
 	============================================= */
 a.crumb					{color:rgba(170,204,238,1);}
