@@ -18,6 +18,13 @@ a:active				{color:rgba(170,0,0,1);}
 .overlay				{background-color:rgba(31,0,0,0.6);}
 
 
+/*	Settings
+	============================================= */
+#settings				{background-color:rgba(130,0,0,1);}
+a.settings_link span	{color:rgba(255,0,0,1);}
+a.settings_link:hover span	{color:rgba(255,0,0,1);}
+
+
 /*	Breadcrumbs
 	============================================= */
 a.crumb					{color:rgba(204,0,0,1);}
@@ -62,7 +69,7 @@ a.ask.donor				{background-color:rgba(130,0,0,1);}
 a.ask.donor:hover		{background-color:rgba(158,0,0,1);}
 a.ask.sector			{background-color:rgba(107,0,0,1);}
 a.ask.sector:hover		{background-color:rgba(136,0,0,1);}
-.main_peak_wrap			{background-color:rgba(255,0,0,1);}
+.main_peak_wrap			{background-color:rgba(255,255,255,1);}
 .peak.donor				{border-top:20px solid rgba(130,0,0,1);}
 .peak.sector			{border-top:20px solid rgba(107,0,0,1);}
 a.view_all_money		{background-color:rgba(15,0,0,0.7); color:rgba(204,0,0,1);}
