@@ -53,10 +53,10 @@ Projets terminés icône
 Activité icône
 
 #alert_icon_alt_text 
-icône d'alerte 
+Icône d'alerte 
 
 #info_icon_alt_text 
-icône d'information 
+Icône d'information 
 
 #about_this_data_text 
 À propos de ces données 
@@ -68,7 +68,7 @@ icône d'information
 d-portal.org est encore en développement très tôt et prévue pour Alpha version mi-Avril. Merci de votre patience! S'il vous plaît fournir des informations 
 
 #beige_alert_here_text 
-ici
+Ici
 
 #beige_alert_text
 d-portal.org est actuellement en version bêta.
@@ -122,7 +122,7 @@ Projets Terminés
 Projets Prévus 
 
 #crumbname_list_publishers_text 
-éditeurs 
+Editeurs 
 
 #crumbname_missing_text 
 Projets manquantes
@@ -143,13 +143,13 @@ Liste des Pays
 Liste des éditeurs
 
 #crumbname_list_transactions_text 
-transactions 
+Transactions 
 
 #crumbname_list_budgets_text 
-budgets 
+Budgets 
 
 #crumbname_list_activities_text 
-activités
+Activités
 
 #data_investigate_text 
 Chercheurs de Données, nous avons besoin de vous! Si vous trouvez quelque chose à sa place, s'il vous plaît contacter l'équipe de développement.
@@ -431,7 +431,7 @@ Mode Haute Visibilité
 Original flava
 
 #flag_alt_text 
-drapeau
+Drapeau
 
 #map_info_text 
 Il s'agit d'une carte de chaleur de toutes les activités de {portal_name} qui ont été fournis avec des emplacements précis.
