@@ -53,10 +53,10 @@ Proyectos terminados el icono
 Icono de Actividad
 
 #alert_icon_alt_text 
-icono de alerta 
+Icono de alerta 
 
 #info_icon_alt_text 
-icono de la información 
+Icono de la información 
 
 #about_this_data_text 
 Sobre estos datos 
@@ -68,7 +68,7 @@ Acerca de la calidad de datos
 d-portal.org está todavía en desarrollo muy temprano y programado para Alpha liberación a mediados de abril. Gracias por su paciencia! Por favor proporcione cualquier información 
 
 #beige_alert_here_text 
-aquí
+Aquí
 
 #beige_alert_text
 d-portal.org se encuentra actualmente en beta.
@@ -146,7 +146,7 @@ Lista Editorial
 Transacciones 
 
 #crumbname_list_budgets_text 
-presupuestos 
+Presupuestos 
 
 #crumbname_list_activities_text 
 Actividades
@@ -377,10 +377,10 @@ Haga clic para explorar todos los proyectos notificados por este editor
 Número de proyectos reportados
 
 #iati_logo_alt_text
-logo IATI
+Logo IATI
 
 #dportal_logo_alt_text
-logo Portal de Desarrollo
+Logo Portal de Desarrollo
 
 #tongue_eng_tip_text 
 Ver esto en Inglés(UK) 
@@ -428,7 +428,7 @@ Modo de Alta Visibilidad
 Original flava
 
 #flag_alt_text 
-bandera
+Bandera
 
 #map_info_text 
 Este es un mapa de calor de todas las actividades para {portal_name} que han sido proporcionados con ubicaciones precisas.
