@@ -56,7 +56,7 @@ Where is the data from?
 Data in the dropdown menu is built from the <a href="https://github.com/devinit/D-Portal/tree/master/dstore">database</a> which updates everyday at GMT +0 with new data fetched from the IATI Registry.
 
 #index_paragraph4_text
-We list countries that are reported by publishers using <a href="http://en.wikipedia.org/wiki/ISO_3166-2">ISO3166 Alpha-2</a>. For attribution and link to data sources, <a href="about.html#sources">go here</a>.
+We list countries that are reported by publishers using <a href="http://en.wikipedia.org/wiki/ISO_3166-2">ISO3166 Alpha-2</a>. For attribution and links to data sources, <a href="about.html#sources">go here</a>.
 
 #index_paragraph5_text
 The list of publishers with their IATI publisher ID comes straight from the IATI Registry database.
