@@ -6,6 +6,7 @@ Fixed layout for main and minimised versions
 Added CSS for Print-Friendly version
 Added icons for Print-Friendly version
 Fixed background image for Search
+Fixed Search and Settings css for rgba styles
 
 
 Development Portal (2015-07-23 shi)
